# log_system

./: .gitignore  CMakeLists.txt  ReadMe.md  log_system.cpp  log_system.h  test.cpp
dlib/: ReadMe.txt  ReadMe.txt~
dlib/dlib/: CMakeLists.txt
